--- a/mcf-config-demo-lib/Cargo.toml
+++ b/mcf-config-demo-lib/Cargo.toml
@@ -3,6 +3,9 @@ name = "mcf-config-demo-lib"
 version = "0.1.0"
 authors = ["James Munns <james@onevariable.com>"]
 edition = "2018"
+description = "A Proof of Concept"
+license = "MIT"
+repository = "https://github.com/jamesmunns/mcf-config-demo"
 
 [dependencies]
 mcf-config-demo-settings = { path = "../mcf-config-demo-settings" }
