--- a/mcf-config-demo-settings/Cargo.toml
+++ b/mcf-config-demo-settings/Cargo.toml
@@ -3,5 +3,8 @@ name = "mcf-config-demo-settings"
 version = "0.1.0"
 authors = ["James Munns <james@onevariable.com>"]
 edition = "2018"
+description = "A Proof of Concept"
+license = "MIT"
+repository = "https://github.com/jamesmunns/mcf-config-demo"
 
 [dependencies]
