--- a/mcf-config-demo-lib/Cargo.toml
+++ b/mcf-config-demo-lib/Cargo.toml
@@ -8,4 +8,4 @@ license = "MIT"
 repository = "https://github.com/jamesmunns/mcf-config-demo"
 
 [dependencies]
-mcf-config-demo-settings = { path = "../mcf-config-demo-settings" }
+mcf-config-demo-settings = "0.1"
