--- a/mcf-config-demo-override/Cargo.toml
+++ b/mcf-config-demo-override/Cargo.toml
@@ -3,5 +3,6 @@ name = "mcf-config-demo-settings"
 version = "0.1.0"
 authors = ["James Munns <james@onevariable.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
